--- a/ClairG.ChatApp/ClairG.ChatApp.WebApp/ClairG.ChatApp.WebApp.csproj
+++ b/ClairG.ChatApp/ClairG.ChatApp.WebApp/ClairG.ChatApp.WebApp.csproj
@@ -132,6 +132,7 @@
     </Compile>
     <Compile Include="Models\LoginVM.cs" />
     <Compile Include="Models\RegisterVM.cs" />
+    <Compile Include="Models\ReplyVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
