--- a/ClairG.ChatApp/ClairG.ChatApp.WebApp/ClairG.ChatApp.WebApp.csproj
+++ b/ClairG.ChatApp/ClairG.ChatApp.WebApp/ClairG.ChatApp.WebApp.csproj
@@ -174,6 +174,8 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\ChatRoom\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Shared\_UserLayout.cshtml" />
+    <Content Include="Views\Account\Logout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
