--- a/ClairG.ChatApp/ClairG.ChatApp.WebApp/ClairG.ChatApp.WebApp.csproj
+++ b/ClairG.ChatApp/ClairG.ChatApp.WebApp/ClairG.ChatApp.WebApp.csproj
@@ -132,6 +132,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\LoginVM.cs" />
+    <Compile Include="Models\PictureVM.cs" />
     <Compile Include="Models\RegisterVM.cs" />
     <Compile Include="Models\ReplyVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -181,6 +182,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Profile_Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
